{
    "name": "GameControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "3bc8dd71-976a-4b35-a58a-9859616c9f12",
            "actions": [
                {
                    "name": "MovePieceLeft",
                    "type": "Button",
                    "id": "28dc8df4-768d-4d71-86ea-a8d1ce35ae28",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MovePieceRight",
                    "type": "Button",
                    "id": "209457db-2830-4d03-9bef-16cd970c6ee7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SoftDrop",
                    "type": "Button",
                    "id": "c855c62c-b5a4-4ff3-ae92-7223e7a04f51",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HardDrop",
                    "type": "Button",
                    "id": "a9e6c90c-085b-41dd-af2c-cde4837c930d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateCounterclockwise",
                    "type": "Button",
                    "id": "07c3c79c-130c-40c6-9436-d4314d2d1dc5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateClockwise",
                    "type": "Button",
                    "id": "9508ea03-0789-4de8-aede-63fe420389c0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotate180",
                    "type": "Button",
                    "id": "464aa46d-5c93-478e-ab4c-f158718bf8e2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwapHoldPiece",
                    "type": "Button",
                    "id": "0f6e0853-f95b-4fa7-b7b7-f6197405dad7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveToLeftWall",
                    "type": "Button",
                    "id": "2a6d3789-537d-4404-b2ce-b83d1b01ce43",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveToRightWall",
                    "type": "Button",
                    "id": "922924dd-5899-47b4-b670-42751bb58539",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PauseGame",
                    "type": "Button",
                    "id": "d8c109b9-0f17-4707-a816-61a7c7434e1c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RetryGame",
                    "type": "Button",
                    "id": "b6ae133e-dea8-410a-b61d-5dc5ec817e67",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c7710bf9-8412-429e-983c-efdc1f5937fc",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "MovePieceLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "20e39b47-2e44-4b42-8631-20d73d2b9e52",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "MovePieceLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f22be785-ea91-4059-b912-84864491b1a9",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "MovePieceLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f702b39a-ff26-4960-bda1-dc2ebd1af8f2",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "MovePieceRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed8c83b9-fcb7-4cfb-91b6-5607ec6d593e",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "MovePieceRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd1f0b0e-0dff-45a9-b132-6a6fe1f8f266",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "MovePieceRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44bf0ae7-c509-47f8-a518-e1b99431ba76",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "SoftDrop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d0ba80f1-ac3d-4403-ad06-c07eff1e5bc2",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "SoftDrop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "08050646-1ecb-40c5-b55b-3b5fe365a5d2",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "SoftDrop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0973c871-a2c6-4374-9586-86c5020ffc45",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "HardDrop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f4164f5-d2d5-474f-9a15-7d16d00e99f9",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "HardDrop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f0183f3-9d97-48c0-8a51-74634a190424",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "HardDrop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87dcd974-3c15-4558-8327-1a664776d5ad",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "RotateCounterclockwise",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ba1e5b6-76c3-42b8-8557-36329634fe89",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "RotateCounterclockwise",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e36758c-1a29-4d56-9719-77b13ce69059",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "RotateCounterclockwise",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f67a425d-0986-48e1-a5cc-82ae4b883a2c",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "RotateClockwise",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3001306f-8483-49df-a4c9-89b3488f0495",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "RotateClockwise",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9f686648-f824-4d0c-94b6-1c379855853f",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "RotateClockwise",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7811a105-0f20-4ad3-8428-a51a239f3037",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "Rotate180",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30389393-6239-4f38-8606-3e958aea15b4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "Rotate180",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a9685b04-e736-4ef6-8d83-a4c123fefb3d",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "Rotate180",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4acd7633-5ca4-473f-9467-54ef41c7d04f",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "SwapHoldPiece",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae99a22a-675f-4bb9-b964-926389053611",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "SwapHoldPiece",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b47895d2-e234-4b97-835c-cf57e6dbe824",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "SwapHoldPiece",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1271b7c3-792c-4541-9c2a-6b51c9c47c15",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e980a33b-e103-4fbd-b835-d08a158e351a",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b5b57f0-4c5b-47d0-a8b1-669826372f98",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f5f86ce-d258-4998-aecf-91d74af23e1f",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RetryGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a038133d-1be0-44de-a20c-d33075f13499",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RetryGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5e30f89-7f8a-4531-8ac7-028b47a36414",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RetryGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d597d064-b6b1-4a13-a18c-b95b1b27c983",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveToLeftWall",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c792b43f-50a4-4bdf-bf19-236c08579c44",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveToLeftWall",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff6ff8ca-ed75-443f-afb4-b2981ef81850",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveToLeftWall",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87a6ae38-d3a0-421b-b4d5-4f1c26c9c08c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveToRightWall",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea751ac2-750e-4254-9977-bca92f14b664",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveToRightWall",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b72bb7c7-acf5-45de-b71b-d63d6507a7ba",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveToRightWall",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Replays",
            "id": "ae1a376a-00e1-4df3-a540-2ebe1316d22c",
            "actions": [
                {
                    "name": "TogglePause",
                    "type": "Button",
                    "id": "252ee276-0f54-432e-97d3-3e22458882c4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenSettings",
                    "type": "Button",
                    "id": "dad972e0-2a29-4887-b046-54ef385eea9f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrevPiece",
                    "type": "Button",
                    "id": "4f147ea3-a65c-43bc-b422-fb6fe2e0ae97",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextPiece",
                    "type": "Button",
                    "id": "a7a7669f-7850-42ce-99dc-33a46943a7f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "10thSecondForward",
                    "type": "Button",
                    "id": "acb6d6be-0f0a-4500-8a9d-c5d5e4af0636",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "10thSecondBackward",
                    "type": "Button",
                    "id": "90dd62e5-0041-4925-bac8-c5f5df3ac456",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "5SecondsForward",
                    "type": "Button",
                    "id": "3c2fafc2-3fa6-420b-80f5-be8829f3759a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "5SecondsBackward",
                    "type": "Button",
                    "id": "3d3df715-5fe7-4c1c-ae0c-afa6c9b4decb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3a9f8a43-4c4a-4324-987b-9617b335c06c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "TogglePause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c20f066d-b466-4306-bd29-239632d6983a",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "OpenSettings",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cdf50798-72b1-41d5-b14e-f354ac26a665",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "10thSecondForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "89d61284-5fcb-420c-8c94-6c012ead7ab2",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "10thSecondBackward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e50c665a-29c5-4fb1-bb35-59dcacab5e21",
                    "path": "<Keyboard>/pageUp",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "5SecondsForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0344516f-c8a7-4faa-831c-032e80f30f3e",
                    "path": "<Keyboard>/pageDown",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "5SecondsBackward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d5877a0-c3a0-4517-9f96-f7908dac38c7",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "NextPiece",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54cdab13-cd30-4a76-b140-c28f5a705097",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "PrevPiece",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Default",
            "bindingGroup": "Default",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": true,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}