
/************************************
ActionType.cs -- created by Marek Danƒço (xdanco00)
*************************************/
namespace UStacker.Gameplay.Enums
{
    public enum ActionType : short
    {
        MoveLeft,
        MoveRight,
        Hold,
        Harddrop,
        Softdrop,
        RotateCW,
        RotateCCW,
        Rotate180,
        MoveToLeftWall,
        MoveToRightWall
    }
}
/************************************
end ActionType.cs
*************************************/
